# krab-chat

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
client/: Cargo.toml
client/src/: main.rs
proto/: Cargo.toml  build.rs
proto/src/: chat.proto
server/: Cargo.toml
server/src/: channel.rs  channel_manager.rs  chat_room.rs  chat_service.rs  lib.rs  main.rs  utils.rs
