[workspace]
members = ["client", "proto", "server"]
resolver = "2"

[workspace.dependencies]
# proto & grpc
prost = "0.12"
tonic = "0.10"
tonic-build = "0.10"

# async runtime
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# utils
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
